--- a/business.html
+++ b/business.html
@@ -176,7 +176,7 @@
             </div>
             <div class="detail-box">
               <p>
-                Shlamar Gardens Lahore
+                Lorem Ipsum is simply dummy text
               </p>
             </div>
           </div>
@@ -188,7 +188,7 @@
             </div>
             <div class="detail-box">
               <p>
-                +923084546534
+                +02 1234567890
               </p>
             </div>
           </div>
@@ -200,7 +200,7 @@
             </div>
             <div class="detail-box">
               <p>
-                penguinwebagency@gmail.com
+                demo@gmail.com
               </p>
             </div>
           </div>
@@ -227,13 +227,16 @@
       </div>
     </div>
   </section>
+
+
+
   <!-- end info_section -->
 
   <!-- footer section -->
   <section class="container-fluid footer_section">
     <p>
       &copy; 2020 All Rights Reserved. Design by
-      <a href="adeelf896@gmail.com">Adeel Fazil</a>
+      <a href="https://html.design/">Free Html Templates</a>
     </p>
   </section>
   <!-- footer section -->
