--- a/more.html
+++ b/more.html
@@ -169,7 +169,7 @@
             </div>
             <div class="detail-box">
               <p>
-            <a href="shalamar gardens lahore"> Shalamar Gardens Lahore</a>
+                Lorem Ipsum is simply dummy text
               </p>
             </div>
           </div>
@@ -181,7 +181,7 @@
             </div>
             <div class="detail-box">
               <p>
-                 <a href="+923084546534"> +923084546534</a>
+                +02 1234567890
               </p>
             </div>
           </div>
@@ -193,7 +193,7 @@
             </div>
             <div class="detail-box">
               <p>
-                <a href="adeelf896@gmail.com">adeelf896@gmail.com</a>
+                demo@gmail.com
               </p>
             </div>
           </div>
@@ -229,11 +229,10 @@
   <section class="container-fluid footer_section">
     <p>
       &copy; 2020 All Rights Reserved. Design by
-      <a href="adeelf896@gmail.com">Adeel Fazil</a>
+      <a href="https://html.design/">Free Html Templates</a>
     </p>
   </section>
   <!-- footer section -->
-
 
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
